crates/ruff_python_parser/tests/snapshots/invalid_syntax@unparenthesized_named_expr_set_literal_py38.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/unparenthesized_named_expr_set_literal_py38.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            24,
        ),
        range: 0..88,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        7,
                    ),
                    range: 43..57,
                    value: Set(
                        ExprSet {
                            node_index: NodeIndex(
                                6,
                            ),
                            range: 43..57,
                            elts: [
                                Named(
                                    ExprNamed {
                                        node_index: NodeIndex(
                                            3,
                                        ),
                                        range: 44..50,
                                        target: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    1,
                                                ),
                                                range: 44..45,
                                                id: Name("x"),
                                                ctx: Store,
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(
                                                    2,
                                                ),
                                                range: 49..50,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(
                                            4,
                                        ),
                                        range: 52..53,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(
                                            5,
                                        ),
                                        range: 55..56,
                                        value: Int(
                                            3,
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        15,
                    ),
                    range: 58..72,
                    value: Set(
                        ExprSet {
                            node_index: NodeIndex(
                                14,
                            ),
                            range: 58..72,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(
                                            8,
                                        ),
                                        range: 59..60,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                Named(
                                    ExprNamed {
                                        node_index: NodeIndex(
                                            12,
                                        ),
                                        range: 62..68,
                                        target: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    10,
                                                ),
                                                range: 62..63,
                                                id: Name("x"),
                                                ctx: Store,
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(
                                                    11,
                                                ),
                                                range: 67..68,
                                                value: Int(
                                                    2,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(
                                            13,
                                        ),
                                        range: 70..71,
                                        value: Int(
                                            3,
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        23,
                    ),
                    range: 73..87,
                    value: Set(
                        ExprSet {
                            node_index: NodeIndex(
                                22,
                            ),
                            range: 73..87,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(
                                            16,
                                        ),
                                        range: 74..75,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(
                                            17,
                                        ),
                                        range: 77..78,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                                Named(
                                    ExprNamed {
                                        node_index: NodeIndex(
                                            21,
                                        ),
                                        range: 80..86,
                                        target: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    19,
                                                ),
                                                range: 80..81,
                                                id: Name("x"),
                                                ctx: Store,
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(
                                                    20,
                                                ),
                                                range: 85..86,
                                                value: Int(
                                                    3,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.8"}
2 | {x := 1, 2, 3}
  |  ^^^^^^ Syntax Error: Cannot use unparenthesized assignment expression as an element in a set literal on Python 3.8 (syntax was added in Python 3.9)
3 | {1, x := 2, 3}
4 | {1, 2, x := 3}
  |


  |
1 | # parse_options: {"target-version": "3.8"}
2 | {x := 1, 2, 3}
3 | {1, x := 2, 3}
  |     ^^^^^^ Syntax Error: Cannot use unparenthesized assignment expression as an element in a set literal on Python 3.8 (syntax was added in Python 3.9)
4 | {1, 2, x := 3}
  |


  |
2 | {x := 1, 2, 3}
3 | {1, x := 2, 3}
4 | {1, 2, x := 3}
  |        ^^^^^^ Syntax Error: Cannot use unparenthesized assignment expression as an element in a set literal on Python 3.8 (syntax was added in Python 3.9)
  |
